@@ -4,6 +4,7 @@ v 8.4.0 (unreleased)
   - Fix Error 500 when doing a search in dashboard before visiting any project (Stan Hu)
   - Implement new UI for group page
   - Implement search inside emoji picker
+  - Add API support for looking up a user by username (Stan Hu)
   - Add project permissions to all project API endpoints (Stan Hu)
 
 v 8.3.1 (unreleased)
